fix insta icon alignment

--- a/src/pages/landing/Landing.module.scss
+++ b/src/pages/landing/Landing.module.scss
@@ -257,7 +257,7 @@ body {
               .instaIcon {
                 width: 38%;
                 rotate: -12deg;
-                translate: 3px -4px;
+                translate: 1.5px -4px;
               }
             }
           }
